--- a/registro.html
+++ b/registro.html
@@ -14,8 +14,4 @@
     <label for="exampleInputPassword1">Contraseña</label>
     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Introduce tu contraseña">
 </div>
-<div class="form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Recuerdame</label>
-</div>
-<button type="submit" class="btn btn-primary">Submit</button>
+<button type="submit" class="btn btn-primary">Registrarse</button>
